# codex-plugins-geo-mining-research

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  MCP_SETUP.md  MCP_TROUBLESHOOTING.md  README.md  README.zh-CN.md  THMC_MCP_INTEGRATION_GUIDE.md  THMC_MODELING_GUIDE.md  pyproject.toml
.codex-plugin/: plugin.json
docs/: GeoMine_Research_User_Manual.md  GeoMine_Research_User_Manual.zh-CN.md  PROJECT_ORGANIZATION_PLAN.md  README.md
examples/: aoi-screening-request.md  geochem-interpretation-request.md  ni43-101-review-request.md  sample-output-brief.md  (+2 more)
mcp/geomine-thmc-server/: README.md  pyproject.toml
mcp/geomine-thmc-server/src/geomine_thmc_mcp/: __init__.py  auth.py  config.py  data_server.py  pflotran_server.py  provenance.py  schemas.py  server.py  storage.py
mcp/geomine-thmc-server/src/geomine_thmc_mcp/adapters/: __init__.py  ogs_project_builder.py  pflotran_input_builder.py  phreeqc_input_builder.py
mcp/geomine-thmc-server/src/geomine_thmc_mcp/clients/: __init__.py  compute_client.py  openmine_api_client.py  phreeqc_client.py  postgis_client.py  r2_client.py
mcp/geomine-thmc-server/src/geomine_thmc_mcp/tests/: test_dgr_data_collection.py  test_mock_phreeqc.py  test_mock_project_database.py  test_pflotran_modeling.py  test_run_records.py  test_tools_schema.py
mcp/geomine-thmc-server/src/geomine_thmc_mcp/tools/: __init__.py  dgr_data_collection.py  lithology_mineralogy.py  model_registry.py  pflotran_modeling.py  phreeqc_service.py  project_database.py  r2_postgis.py  remote_compute.py  run_records.py  water_chemistry.py
tests/: test_adapters.py  (+16 more)
(+262 files in other folders)
