[project]
name = "geo-mining-research"
version = "0.2.0"
description = "GeoMine Research Codex plugin helper package."
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.2.0",
  "httpx>=0.28.0"
]

[project.scripts]
geomine-mcp = "geomine_mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
addopts = "-q"
