[project]
name = "geomine-thmc-mcp"
version = "0.2.0"
description = "GeoMine THMC MCP servers for mock-backed OpenMine project data, DGR field-data acquisition, PHREEQC drafts, PFLOTRAN planning packages, remote compute jobs, model versions, and run records."
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.2.0",
  "httpx>=0.28.0"
]

[project.scripts]
geomine-thmc-mcp = "geomine_thmc_mcp.server:main"
geomine-thmc-data-mcp = "geomine_thmc_mcp.data_server:main"
geomine-pflotran-mcp = "geomine_thmc_mcp.pflotran_server:main"

[tool.pytest.ini_options]
testpaths = ["src/geomine_thmc_mcp/tests"]
pythonpath = ["src"]
